# ReKat

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile  compile.bat  compile.sh  run  run.bat
Code/Include/: ReKat.hpp
Code/Include/Graphik/: button.h  button.hpp  camera.h  graphik.hpp  manager.h  model.h  object.h  shader.h  sprite.h  sprite.hpp  text.h  text.hpp  texture.h  texture.hpp  tilemap.h
Code/Include/Graphik/_OLD/: ResourceManager.cpp  api.cpp  api.hpp  stb_image.hpp  text.cpp
Code/Include/Online/: 1.online.md  common.hpp  online.linux.hpp
Code/Include/Online_P/: common.hpp  online.windows.hpp
Code/Include/Online_P/number/: common.hpp  long_wrapper.hpp  number.hpp  t_arit_test.cpp  utility.hpp
Code/NOBUILD/_OLD/: ResourceManager.cpp  ResourceManager.hpp  api.md  shader.hpp  text.hpp  texture.cpp
Code/NOBUILD/number/: arithmetic.hpp  boolean.hpp
Code/Resources/Data/Tilemaps/: test.tiled-session
Code/Resources/Shaders/: basic.fs  sprite_animation.fs  texture.vs
Code/Src/: grapik.cpp  main.cpp  merged.cpp  node.cpp
Code/Src/V1.0/: merged.cpp
Code/Src/V1.1/: controlls.hpp  node_treads.hpp
Code/Src/V1.2/: command.hpp  controlls.hpp  main.cpp  main_model.cpp  node_treads.hpp
Code/Src/V1.3/: main.cpp
Code/Src/V1.4/: controlls.hpp  global.hpp  main.cpp
Code/Src/V2.0/: command.hpp  connection.hpp  controlls.hpp  file_manager.hpp  global.hpp  main.cpp  node_treads.hpp  render.hpp
Code/Src/V2.1/: command.hpp  controlls.hpp  global.hpp  main.cpp  render.hpp
Code/Test/: button_test.cpp  help.cpp  main.cpp  tex.cpp
Code/Test/Audio_test/: main.cpp
Code/Test/Graphik_test/: button_test.cpp  help.cpp  main.cpp  sprite_test.cpp  test_freetype.cpp  test_lib.cpp  texture.cpp  texture_RK.cpp  tile_map.cpp
Code/Test/TestSock_Win_S/: server.cpp
Code/Test/node_network/: main.cpp
cmake-modules/: exe_lib.cmake  executable.cmake  library.cmake
